# edge-infra

./: .gitignore  Dockerfile.control-plane  Makefile  go.mod  go.sum
.github/workflows/: deploy-test.yaml  images.yaml  issuer-test.yaml  osb-test.yaml  policy-test.yaml  test.yaml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: auth.rs  config.rs  error.rs  jwks.rs  lib.rs  main.rs  metrics.rs
auth-service/tests/: crypto_provider.rs  integration_test.rs
cmd/controller/: main.go
cmd/issuer/: main.go
cmd/migrate/: main.go
cmd/ratelimit/: main.go
cmd/secrets/: main.go
cmd/server/: admin.go  admin_integration_test.go  admin_test.go  callbacks.go  health.go  health_test.go  main.go  metrics.go  tls.go  tls_test.go  xds_envoy_tls_test.go  xds_mtls_test.go
deploy/hack/: verify-xds-mtls.sh
deploy/local/: .gitignore  README.md  lib.sh  (+6 more)
docs/: auth-front-deploy.md  bootstrap.md  clusterip-guarantee.md  migrations.md  osb-translator-stage1.md  sec3-preflight.md  semantic-cache-eviction-handback.md
migrations/: 0001_init.sql  0002_controller_fields.sql  0003_service_policy.sql  0004_auth_policy.sql  0005_route_tls_secret.sql  0006_secret_kind.sql  0007_route_client_ca.sql  embed.go
osb/: Dockerfile  Makefile  broker.py  config.py  db.py  main.py  metrics.py  models.py  netguard.py  pyproject.toml  security.py  specvalidation.py  tls.py  translator.py  webhook.py  worker.py
osb/migrations/: 0001_osb.sql  0002_tenancy.sql  0003_dead_letter.sql  embed.go
osb/tests/: conftest.py  test_api.py  test_broker.py  test_colocation.py  test_metrics.py  test_netguard.py  test_security.py  test_specvalidation.py  test_tenancy.py  test_tls.py  test_translator.py  test_webhook.py  test_worker.py
osb/tools/: provision.py
scripts/: bootstrap-pki.sh  sec3-preflight.sh
(+239 files in other folders)
